last corrections to the paper and commit si

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -676,27 +676,25 @@ author = "J. H. Miller"
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DATA%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @misc{data,
-  author       = {Glynatsi, N. E.},
+  author       = {Nikoleta E.},
   title        = {{A data set of 45686 Iterated Prisoner's Dilemma 
                    tournaments' results}},
-  month        = oct,
-  year         = 2019,
+  month        = dec,
+  year         = 2023,
   publisher    = {Zenodo},
-  version      = {0.0.1},
-  doi          = {10.5281/zenodo.3516652},
-  howpublished = "\url{https://doi.org/10.5281/zenodo.3516652}"
+  doi          = {10.5281/zenodo.10246247},
+  url          = {https://doi.org/10.5281/zenodo.10246247}
 }
 
 @misc{raw_data,
   author       = {Glynatsi, Nikoleta E.},
   title        = {{A data set of 45686 Iterated Prisoner's Dilemma 
                    tournaments' results [RAW DATA]}},
-  month        = apr,
-  year         = 2020,
+  month        = dec,
+  year         = 2023,
   publisher    = {Zenodo},
-  version      = {1.0.0},
-  doi          = {10.5281/zenodo.3753498},
-  url          = {https://doi.org/10.5281/zenodo.3753498}
+  doi          = {10.5281/zenodo.10246248},
+  url          = {https://doi.org/10.5281/zenodo.10246248}
 }
 
 
