--- a/paper/regression_table.tex
+++ b/paper/regression_table.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lggccggccgg}
 \toprule
-& \multicolumn{2}{g}{Standard} & \multicolumn{2}{c}{Noisy} & \multicolumn{2}{g}{Probabilistic ending} & \multicolumn{2}{c}{Noisy probabilistic ending} \\
+& \multicolumn{2}{g}{Standard} & \multicolumn{2}{c}{Nois $p_n \leq 0.1$} & \multicolumn{2}{g}{Probabilistic ending $p_e \leq 0.1$} & \multicolumn{2}{c}{Noisy probabilistic ending} \\
 \midrule
 & \multicolumn{2}{g}{\(R\) adjusted: 0.541} & \multicolumn{2}{c}{\(R\) adjusted: 0.373} & \multicolumn{2}{g}{\(R\) adjusted: 0.457} & \multicolumn{2}{c}{\(R\) adjusted: 0.537} \\
 {} &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value \\
