--- a/paper/result_with_entire_dataset.tex
+++ b/paper/result_with_entire_dataset.tex
@@ -1,4 +1,4 @@
-\section{Top ranked strategies and features analysis for the entire data set}
+\section{Top ranked strategies and features analysis for the entire data set}\label{app:analysis_full_dataset}
 
 In this section we carry out a similar analysis as the one presented in
 main manuscript, but this time we use the entire data set for noisy and
@@ -439,3 +439,12 @@ significant effects based on the multivariate regression models.
         for the winners over the tournaments of the entire data set.}
         \label{fig:discussion_entire_data}
 \end{figure}
+
+
+A third method that evaluates the importance of features using clustering and
+random forests can be found in the Section~\ref{app:clustering}. The results uphold
+the outcomes of the correlation and multivariate regression. It also evaluates
+the effects of the whether or not a strategy is stochastic, makes use of the
+knowledge of the utility values, or makes use of match length. These were not
+evaluated by the methods above because there are binary variables. The results
+showed that they have no significant effect on a strategy's performance.
