change NG affiliation, note that VK and MH contributed equally + ref style

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -42,14 +42,15 @@
 \setlength{\tabcolsep}{3pt}
 
 \title{Properties of Winning Iterated Prisoner's Dilemma Strategies.}
-\author[1]{Nikoleta E. Glynatsi}
-\author[2]{Vincent Knight}
-\author[3]{Marc Harper}
+\author[1, 2]{Nikoleta E. Glynatsi}
+\author[2, $\dagger$]{Vincent Knight}
+\author[3, $\dagger$]{Marc Harper}
 
 \affil[1]{Max Planck Institute for Evolutionary Biology, Research Group Dynamics of Social
 Behavior, Germany}
 \affil[2]{Cardiff University, School of Mathematics, UK}
 \affil[3]{Google Inc., Mountain View, CA, USA}
+\affil[$\dagger$]{V.K. and M.H. contributed equally to this work.}
 \date{}
 
 
@@ -832,7 +833,7 @@ tournaments, to the authors knowledge. The raw data set is available
 at~\cite{raw_data} and the processed data at~\cite{data}. Further data mining
 could be applied and provide new insights in the field.
 
-\bibliographystyle{plain}
+\bibliographystyle{naturemag}
 \bibliography{bibliography}
 
 \section{Acknowledgements}
