change bin size for hist plots

--- a/nbs/1. Top Ranked Strategies [Noise and Probend Smaller than 0.1].ipynb
+++ b/nbs/1. Top Ranked Strategies [Noise and Probend Smaller than 0.1].ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -188,7 +188,7 @@
     "    values = dfs[i][dfs[i]['Name'] == 'Tit For Tat']['Normalized_Rank'].unique()\n",
     "    counts = dfs[i][dfs[i]['Name'] == 'Tit For Tat']['seed'].nunique()\n",
     "    weights = np.ones_like(values) / float(len(values))\n",
-    "    ax.hist(values, weights=weights, color=color, label=f'$n_t$ = {counts}')\n",
+    "    ax.hist(values, weights=weights, color=color, label=f'$n_t$ = {counts}',)\n",
     "    ax.axvline(\n",
     "        np.median(values),\n",
     "        color=\"darkred\",\n",
@@ -259,7 +259,7 @@
     "    fig.add_subplot(ax)\n",
     "\n",
     "\n",
-    "plt.savefig('../images/normalised_rank_distributions.pdf', bbox_inches='tight')"
+    "# plt.savefig('../images/normalised_rank_distributions.pdf', bbox_inches='tight')"
    ]
   },
   {
