move last sections around

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -843,11 +843,15 @@ tournaments, to the authors knowledge. The raw data set is available
 at~\cite{raw_data} and the processed data at~\cite{data}. Further data mining
 could be applied and provide new insights in the field.
 
-\bibliographystyle{naturemag}
-\bibliography{bibliography}
+\section{Data availability statement}
+
+The raw and processed datasets have been made publicly available~\cite{data,
+raw_data} and can be used for further analysis and insights.
 
 \section{Acknowledgements}
 
+N.G. acknowledges the generous support of the European Research Council Starting
+Grant 850529: E-DIRECT and the Max Planck Society.
 A variety of open-source software have been used in this work. The authors would
 like to express their gratitude to the open-source software community, whose
 invaluable contributions significantly enhanced the development and execution of
@@ -858,9 +862,7 @@ visualisation~\cite{hunter2007matplotlib}, The Numpy library for data
 manipulation~\cite{walt2011numpy}, and finally the scikit-learn library for data
 analysis~\cite{scikit-learn}.
 
-\section{Data availability statement}
-
-The raw and processed datasets have been made publicly available~\cite{data,
-raw_data} and can be used for further analysis and insights.
+\bibliographystyle{naturemag}
+\bibliography{bibliography}
 
 \end{document}
